SG-1191 - fix search box padding on mobile

--- a/web/themes/custom/sfgovpl/src/sass/block/_block-search.scss
+++ b/web/themes/custom/sfgovpl/src/sass/block/_block-search.scss
@@ -12,6 +12,13 @@
   }
 }
 
+.sfgov-search-form {
+  position: relative;
+  @include media($medium-screen) {
+    position: static;
+  }
+}
+
 .path-search {
   header[role="banner"] .sfgov-mobile-nav-btn.sfgov-mobile-search {
     display: none;
